--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.AgroPESTApplication"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".Screens.SplashScreenActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
