--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:theme="@style/Theme.AgroPESTApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".Screens.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.AgroPESTApplication">
+            android:theme="@style/Theme.Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +26,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
     </application>
 
 </manifest>
