--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -14,8 +14,13 @@
         android:theme="@style/Theme.AgroPESTApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.RegisterActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen"/>
+        <activity
             android:name=".Screens.LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.SplashScreenActivity"
             android:exported="true"
