--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
 
     //Add library
     implementation "com.ncorti:slidetoact:0.10.0"
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
