--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgroPESTApplication"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
+        <activity
+            android:name=".Screens.DashboardActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen"/>
         <activity
             android:name=".Screens.RegisterActivity"
             android:exported="false"
-            android:theme="@style/Theme.LoginScreen"/>
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.LoginActivity"
             android:exported="false"
