--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,14 @@
         android:theme="@style/Theme.AgroPESTApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.ProfileActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile"
+            android:theme="@style/Theme.AgroPESTApplication" />
+        <activity
             android:name=".Screens.RegisterActivity"
             android:exported="false"
-            android:theme="@style/Theme.LoginScreen"/>
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.LoginActivity"
             android:exported="false"
