--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AgroPESTApplication"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Screens.PesticidesActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
+        <activity
+            android:name=".Screens.FertilizerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
+
         <activity
             android:name=".Screens.ProfileActivity"
             android:exported="false"
             android:label="@string/title_activity_profile"
             android:theme="@style/Theme.AgroPESTApplication" />
-            android:name=".Screens.FertilizerActivity"
-            android:exported="false" />
         <activity
             android:name=".Screens.DashboardActivity"
             android:exported="false"
