--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.karumi:dexter:6.0.2'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
 
 
 }
