--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.FertilizerPrice"
+            android:exported="false" />
+        <activity
             android:name=".Screens.PesticidePrice"
             android:exported="false"
-            android:theme="@style/Theme.LoginScreen"/>
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.PesticidesActivity"
             android:exported="false"
