--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         tools:targetApi="31">
         <activity
             android:name=".Screens.FertilizerPrice"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen"/>
         <activity
             android:name=".Screens.PesticidePrice"
             android:exported="false"
