--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
     }
+
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
@@ -79,6 +80,6 @@ dependencies {
     implementation 'com.karumi:dexter:6.0.2'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
-
+    implementation 'com.github.yalantis:ucrop:2.2.6'
 
 }
