--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,13 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.FaqActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
+        <activity
             android:name=".Screens.AgriServiceActivity"
             android:exported="false"
-            android:theme="@style/Theme.LoginScreen"/>
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.FertilizerPrice"
             android:exported="false"
@@ -47,8 +51,8 @@
         <activity
             android:name=".Screens.RegisterActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize|adjustPan"
-            android:theme="@style/Theme.LoginScreen" />
+            android:theme="@style/Theme.LoginScreen"
+            android:windowSoftInputMode="adjustResize|adjustPan" />
         <activity
             android:name=".Screens.LoginActivity"
             android:exported="false"
