--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,7 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.github.yalantis:ucrop:2.2.6'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'  // Use the latest version
+
 
 }
