--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
@@ -82,6 +83,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.github.yalantis:ucrop:2.2.6'
     implementation 'com.google.firebase:firebase-messaging:23.0.0'  // Use the latest version
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
+
 
 
 }
