--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -9,7 +9,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    <uses-permission android:name="android.intent.category.MASTER_CLEAR.permission.C2D_MESSAGE"
+    <uses-permission
+        android:name="android.intent.category.MASTER_CLEAR.permission.C2D_MESSAGE"
         tools:ignore="ProtectedPermissions" />
 
     <application
@@ -20,7 +21,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".Screens.DetailsFertilizerCropActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen"/>
+        <activity
+            android:name=".Screens.DetailsPesticidesCropActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.FaqActivity"
             android:exported="false"
@@ -66,7 +75,7 @@
         <activity
             android:name=".Screens.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.Splashscreen">
+            android:theme="@style/Theme.Splashscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -76,8 +85,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
-
     </application>
 
 </manifest>
