--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31" >
+
+        <activity android:name=".BottomSheetFragment" />
+
         <activity
             android:name=".Screens.DetailsFertilizerCropActivity"
             android:exported="false"
