--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -21,14 +21,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Material3.Light"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".Screens.UpdateProfileActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
         <activity android:name=".BottomSheetFragment" />
-
         <activity
             android:name=".Screens.DetailsFertilizerCropActivity"
             android:exported="false"
-            android:theme="@style/Theme.LoginScreen"/>
+            android:theme="@style/Theme.LoginScreen" />
         <activity
             android:name=".Screens.DetailsPesticidesCropActivity"
             android:exported="false"
@@ -78,7 +80,7 @@
         <activity
             android:name=".Screens.SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.Splashscreen" >
+            android:theme="@style/Theme.Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -88,6 +90,14 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
