--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
         android:theme="@style/Theme.Material3.Light"
         tools:targetApi="31">
         <activity
+            android:name=".Screens.AboutFertlizerActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen"/>
+        <activity
+            android:name=".Screens.AboutPesticidesActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LoginScreen" />
+        <activity
             android:name=".Screens.UpdateProfileActivity"
             android:exported="false"
             android:theme="@style/Theme.LoginScreen" />
